# solidity_recursive_plonk_verifier

./: Cargo.toml  LICENSE  README.md
contracts/: IRecursiveVerifier.sol
src/: VerifierTemplate.sol  config.rs  lib.rs  primitives.rs  render_vk.rs  serialization.rs  types.rs
